preise geändert, schatten bei den hoveritems ist whack

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
   </div>
   <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-6">
+       <!-- <div class="col-xs-12 col-sm-6">
             <div class="menu-section">
                 <h2 class="menu-section-title">Aperitif</h2>
                 <hr>
@@ -314,24 +314,24 @@
             </div>
           </div>
       </div>
-    </div>
+    </div>-->
       <div class="row">
           <div class="menu-section">
               <h2 class="menu-section-title">Vorspeisen</h2>
               <hr>
               <div class="menu-item">
                   <div class="menu-item-name">Carpaccio di Manzo</div>
-                  <div class="menu-item-price">14.50 €</div>
+                  <div class="menu-item-price">15.50 €</div>
                   <div class="menu-item-description">Rindercarpaccio / Vinaigrette / Rucola / Parmesankäse</div>
               </div>
               <div class="menu-item">
                   <div class="menu-item-name">Carpaccio di Branzino</div>
-                  <div class="menu-item-price">14.50 €</div>
+                  <div class="menu-item-price">15.50 €</div>
                   <div class="menu-item-description">Wolfsbarschcarpaccio / Vinaigrette / Kiwigel</div>
               </div>
               <div class="menu-item">
                   <div class="menu-item-name">Antipasto il Gusto</div>
-                  <div class="menu-item-price">16.50 €/ 2p 31.50 €</div>
+                  <div class="menu-item-price">17.50 €/ 2p 33.00 €</div>
 
                   <div class="menu-item-description">Vorspeisen Variation nach Art des Hauses</div>
               </div>
@@ -345,7 +345,7 @@
                   <div class="menu-item-name">Carpaccio di Barbabietola</div>
                   <div class="menu-item-price">13.50 €</div>
 
-                  <div class="menu-item-description">Rote Beete / Karamellisierte Ziegenkäse/Mango</div>
+                  <div class="menu-item-description">Rote Beete / Karamellisierter Ziegenkäse / Mango</div>
               </div>
               <div class="menu-item">
                   <div class="menu-item-name">Vitello Tonnato</div>
@@ -355,20 +355,19 @@
               </div>
               <div class="menu-item">
                   <div class="menu-item-name">Quinoa con Mozzarella di Bufala</div>
-                  <div class="menu-item-price">13.50 €</div>
+                  <div class="menu-item-price">14.50 €</div>
 
                   <div class="menu-item-description">Büffelmozzarella / Honigvinaigrette / Kirschtomaten / Walnuss</div>
               </div>
               <div class="menu-item">
                   <div class="menu-item-name">Graved Lachs</div>
-                  <div class="menu-item-price">15.50 €</div>
+                  <div class="menu-item-price">16.50 €</div>
 
                   <div class="menu-item-description">Passionsfruchtvinaigrette / Jalapeno Paprika</div>
               </div>
               <div class="menu-item">
                   <div class="menu-item-name">Bruschetta il Gusto</div>
                   <div class="menu-item-price">9 €</div>
-
                   <div class="menu-item-description">Auberginenpüree / Süßkartoffelcreme</div>
               </div>
           </div>
@@ -377,13 +376,13 @@
               <hr>
               <div class="menu-item">
                   <div class="menu-item-name">Insalata Mista con Formaggio di Capra</div>
-                  <div class="menu-item-price">8.50 €</div>
+                  <div class="menu-item-price">8.00 €</div>
 
                   <div class="menu-item-description">Vinaigrette / Ziegenkäse / Honig / Kürbiskerne</div>
               </div>
               <div class="menu-item">
                   <div class="menu-item-name">Insalata di Manzo</div>
-                  <div class="menu-item-price">15.50 €</div>
+                  <div class="menu-item-price">16.50 €</div>
 
                   <div class="menu-item-description">Gemischter Salat / Vinaigrette / Rinderfleisch</div>
               </div>
@@ -399,19 +398,19 @@
             <hr>
             <div class="menu-item">
                 <div class="menu-item-name">Spaghetti Aglio Olio / Gamberi</div>
-                <div class="menu-item-price">14.50 €</div>
+                <div class="menu-item-price">15.50 €</div>
 
                 <div class="menu-item-description">Garnelen / Chili / Knoblauch / Olivenöl / Parmesankäse</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Gnocchi Pomodoro & Mozzarella di Bufala</div>
-                <div class="menu-item-price">13.50 €</div>
+                <div class="menu-item-price">14.50 €</div>
 
                 <div class="menu-item-description">Tomaten-Soße / Basilikum / Büffelmozzarella</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Penne al Pomodoro</div>
-                <div class="menu-item-price">10.50 €</div>
+                <div class="menu-item-price">11.50 €</div>
 
                 <div class="menu-item-description">Tomaten-Soße / Parmesankäse</div>
             </div>
@@ -422,25 +421,25 @@
             <hr>
             <div class="menu-item">
                 <div class="menu-item-name">Ravioli di Vitello</div>
-                <div class="menu-item-price">16.50 €</div>
+                <div class="menu-item-price">17.50 €</div>
 
                 <div class="menu-item-description">Kalbfleisch-Füllung / Süßkartoffelcreme / Demi-Glace</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Caramella al Salmone</div>
-                <div class="menu-item-price">16.50 €</div>
+                <div class="menu-item-price">17.50 €</div>
 
                 <div class="menu-item-description">Lachscreme-Füllung / Lauch / Salbei / Butter</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Tortelloni al Sedano</div>
-                <div class="menu-item-price">15.50 €</div>
+                <div class="menu-item-price">16.50 €</div>
 
                 <div class="menu-item-description">Selleriecreme-Füllung / Walnuss / Getrüffelte-Käsecreme</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Tagliatelle con Spinaci</div>
-                <div class="menu-item-price">14.50 €</div>
+                <div class="menu-item-price">15.00 €</div>
 
                 <div class="menu-item-description">Spinat / Creme fraîche / Getrocknete-Tomaten / Mandel</div>
             </div>
@@ -451,31 +450,31 @@
             <hr>
             <div class="menu-item">
                 <div class="menu-item-name">Pizza Vegetariana</div>
-                <div class="menu-item-price">12 €</div>
+                <div class="menu-item-price">13 €</div>
 
                 <div class="menu-item-description">Saisonales Gemüse</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Pizza Capricciosa</div>
-                <div class="menu-item-price">12 €</div>
+                <div class="menu-item-price">13 €</div>
 
                 <div class="menu-item-description">Salami / Schinken / Champignons / Artischocke</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Pizza 4 Fromaggi</div>
-                <div class="menu-item-price">12 €</div>
+                <div class="menu-item-price">13 €</div>
 
                 <div class="menu-item-description">Vier verschiedene Käsesorten</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Pizza il Gusto</div>
-                <div class="menu-item-price">14 €</div>
+                <div class="menu-item-price">15 €</div>
 
                 <div class="menu-item-description">Parmaschinken / Rucola / Parmesankäse</div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-name">Pizza al Salmone</div>
-                <div class="menu-item-price">14 €</div>
+                <div class="menu-item-price">15 €</div>
                 <div class="menu-item-description">Frisches Lachsfilet / Spinat / Olivenöl</div>
             </div>
             <div class="menu-item">
@@ -488,7 +487,7 @@
           <hr>
           <div class="menu-item">
               <div class="menu-item-name">Bistecca di Manzo alla Griglia</div>
-              <div class="menu-item-price">27.50 €</div>
+              <div class="menu-item-price">28.50 €</div>
               <div class="menu-item-description">Rumpsteak vom Grill / Gemüse / Rosmarinkartoffeln</div>
           </div>
           <div class="menu-item">
@@ -505,31 +504,31 @@
           </div>
           <div class="menu-item">
               <div class="menu-item-name">Filetto di Salmone</div>
-              <div class="menu-item-price">27.50 €</div>
+              <div class="menu-item-price">29.50 €</div>
 
               <div class="menu-item-description">Lachsfilet / Rote Paprikacreme / Spinat / Gemüse / Getrüffelteskartoffelpüree</div>
           </div>
           <div class="menu-item">
               <div class="menu-item-name">Filetto di Merluzzo</div>
-              <div class="menu-item-price">28.50 €</div>
+              <div class="menu-item-price">31.50 €</div>
 
               <div class="menu-item-description">Kabeljaufilet / Weißweinsoße / Gemüse / Getrüffeltes Kartoffelpüree</div>
           </div>
           <div class="menu-item">
               <div class="menu-item-name">Collo di Maiale al Forno</div>
-              <div class="menu-item-price">19.50 €</div>
+              <div class="menu-item-price">22.50 €</div>
 
               <div class="menu-item-description">Schweinenacken im Ofen/Selleriepüree/Getrocknete-Pflaumen/Gemüse</div>
           </div>
           <div class="menu-item">
               <div class="menu-item-name">Petto di Pollo</div>
-              <div class="menu-item-price">19.50 €</div>
+              <div class="menu-item-price">20.50 €</div>
 
               <div class="menu-item-description">Hähnchenbrust / Glasierte Fenchel / Marsala / Gemüse / Süßkartoffelpüree</div>
           </div>
           <div class="menu-item">
               <div class="menu-item-name">Filetto di Maiale</div>
-              <div class="menu-item-price">22.50 €</div>
+              <div class="menu-item-price">23.50 €</div>
 
               <div class="menu-item-description">Schweinefilet / Spinat / Karamellisierte Karotten / Getrüffeltes Kartoffelpüree</div>
           </div>
@@ -539,13 +538,13 @@
         <hr>
         <div class="menu-item">
             <div class="menu-item-name">Tiramisu</div>
-            <div class="menu-item-price">7.50 €</div>
+            <div class="menu-item-price">8 €</div>
 
             <div class="menu-item-description">Hausgemacht / Kaffee / Amaretto</div>
         </div>
         <div class="menu-item">
             <div class="menu-item-name">Cassata-Eis</div>
-            <div class="menu-item-price">7.50 €</div>
+            <div class="menu-item-price">8 €</div>
 
             <div class="menu-item-description">Hausgemacht / mit frischen Früchten</div>
         </div>
@@ -557,7 +556,7 @@
         </div>
         <div class="menu-item">
             <div class="menu-item-name">Variazione del Sorbetto</div>
-            <div class="menu-item-price">6.50 €</div>
+            <div class="menu-item-price">7.50 €</div>
 
         </div>
         <div class="menu-item">
@@ -573,7 +572,7 @@
             <div class="menu-item-description">Käse Variation</div>
         </div>
         
-        <h2 class="menu-section-title">Heiße Getränke</h2>
+        <!--<h2 class="menu-section-title">Heiße Getränke</h2>
         <hr>
         <div class="menu-item">
             <div class="menu-item-name">Kaffee / Kaffee Deca</div>
@@ -678,7 +677,7 @@
           <div class="menu-item-name">Armagnac Samalens V.S.O.P 2cl</div>
           <div class="menu-item-price">8.50 €</div>
       </div>
-  </div>      
+  </div> -->     
     </div>  
   </div>
 </div>
@@ -926,7 +925,7 @@
   <div class="container" style="padding-bottom: 10px;">
     <h5>In unserem neu eröffneten Restaurant finden Sie den idealen Ort für Ihre Familienfeiern. In unserem modernen und einladenden Ambiente können Sie mit bis zu 35-40 Personen besondere Anlässe wie Geburtstage und Hochzeiten feiern. Unser erfahrenes Event-Team steht Ihnen mit Freude zur Seite, um Ihre Veranstaltung perfekt zu planen und zu gestalten.</h5>
     <hr>
-    <h2>Wollen sie reservieren?  <strong>+49 6805 9439490</strong></h2>
+    <h2>Möchten sie reservieren?  <strong>+49 6805 9439490</strong></h2>
   </div>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2611.532630418169!2d7.05511261246522!3d49.1145186825279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479435d15c828ee1%3A0x259d132097e4ce16!2sRistorante%20Il%20Gusto!5e0!3m2!1sde!2sde!4v1699108280531!5m2!1sde!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
