pizzeria weg und bilder im img folder

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="row">
           <div class="intro-text">
             <h1>Il Gusto</h1>
-            <p>Ristorante Pizzeria</p>
+            <p>Ristorante</p>
            <!-- <a href="#about" class="btn btn-custom btn-lg page-scroll">Discover Story</a> </div>-->
         </div>
       </div>
@@ -877,6 +877,7 @@
               <img src="img/Ilgusto/speisen/panna cotta sm.png" class="img-responsive" alt="Panna Cotta"> </a> </div>
           </div>
         </div>
+        
       </div>
     <!--</div>-->
   </div>
