--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         <div class="row">
           <div class="intro-text">
             <h1>Il Gusto</h1>
-            <p>Ristorante Pizzeria</p>
+            <p>Ristorante</p>
         </div>
       </div>
     </div>
@@ -912,6 +912,7 @@
               <img src="img/Ilgusto/speisen/panna cotta sm.png" class="img-responsive" alt="Panna Cotta"> </a> </div>
           </div>
         </div>
+        
       </div>
   </div>
 </div>
