--- a/index.html
+++ b/index.html
@@ -981,9 +981,9 @@
     <div class="col-md-4">
       <h3>Öffnungszeiten</h3>
       <div class="contact-item">
-        <p>Mon-Fr & Son: 12:00 - 14:00 & 18:00 - 21:30</p>
+        <p>Die-Fr & Son: 12:00 - 14:00 & 18:00 - 21:30</p>
         <p>Sam: 18:00-21:30</p>
-        <p>Mittwoch Ruhetag</p>
+        <p>Montag Ruhetag</p>
       </div>
     </div>
     <div class="col-md-4">
