--- a/public/index.html
+++ b/public/index.html
@@ -197,12 +197,13 @@
             <div class="menu-item-description">Passionsfruchtvinaigrette / Jalapeno Paprika</div>
             <div class="menu-item-price">15.50 €</div>
           </div>
-        </div>
-        <div class="menu-item">
-          <div class="menu-item-name">Lachs Avocado Tatar</div>
-          <div class="menu-item-description">Lachs / Avocado / Passionsfruchtvinaigrette / Jalapeno Paprika</div>
+          <div class="menu-item">
+            <div class="menu-item-name">Lachs Avocado Tatar</div>
+            <div class="menu-item-description">Lachs / Avocado / Passionsfruchtvinaigrette / Jalapeno Paprika</div>
           <div class="menu-item-price">19.50 €</div>
         </div>
+        </div>
+        
         
         <!-- Salat -->
         <div class="menu-section">
@@ -530,9 +531,9 @@
         <div class="col-md-4">
           <h3>Öffnungszeiten</h3>
           <div class="contact-item">
-            <p>Mon-Fr &amp; Son: 12:00 - 14:00 &amp; 18:00 - 21:30</p>
+            <p>Die-Fr &amp; Son: 12:00 - 14:00 &amp; 18:00 - 21:30</p>
             <p>Sam: 18:00 - 21:30</p>
-            <p>Mittwoch Ruhetag</p>
+            <p>Montag Ruhetag</p>
           </div>
         </div>
         <div class="col-md-4">
